// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors factory should found the route 1`] = `true`;

exports[`selectors factory should get all the params 1`] = `
Object {
  "path": Object {
    "common": "path-value",
    "other": "path-other-value",
    "param": "path-param-value",
  },
  "query": Object {
    "common": "query-value",
    "next": "query-next-value",
    "param": "query-param-value",
  },
}
`;

exports[`selectors factory should get all the path params 1`] = `
Object {
  "common": "path-value",
  "other": "path-other-value",
  "param": "path-param-value",
}
`;

exports[`selectors factory should get all the query params 1`] = `
Object {
  "common": "query-value",
  "next": "query-next-value",
  "param": "query-param-value",
}
`;

exports[`selectors factory should get param from path (path-value) 1`] = `"path-value"`;

exports[`selectors factory should get param from query (query-next-value) 1`] = `"query-next-value"`;

exports[`selectors factory should get path param (path-value) 1`] = `"path-value"`;

exports[`selectors factory should get query param (query-next-value) 1`] = `"query-next-value"`;

exports[`selectors factory should get route code (current-code) 1`] = `"current-code"`;

exports[`selectors factory should get the current route definition 1`] = `
Object {
  "alone": "route-alone-value",
  "code": "current-code",
  "custom": "custom-param-value",
  "param": "route-param-value",
}
`;

exports[`selectors factory should get the result 1`] = `
Object {
  "found": true,
  "params": Object {
    "path": Object {
      "common": "path-value",
      "other": "path-other-value",
      "param": "path-param-value",
    },
    "query": Object {
      "common": "query-value",
      "next": "query-next-value",
      "param": "query-param-value",
    },
  },
  "route": Object {
    "alone": "route-alone-value",
    "code": "current-code",
    "custom": "custom-param-value",
    "param": "route-param-value",
  },
}
`;

exports[`selectors factory should get the result route params 1`] = `"route-alone-value"`;

exports[`selectors factory should get the route -socials- 1`] = `
Object {
  "code": "socials",
  "custom": "custom-socials-value",
}
`;

exports[`selectors factory should get undefined where there is no param 1`] = `undefined`;

exports[`selectors factory should select to otherPath 1`] = `"other-path"`;
